--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@material-ui/pickers": "^3.3.10",
-    "@mui/icons-material": "^5.4.2",
+    "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.4.2",
+    "@mui/x-data-grid": "^5.17.4",
     "@mui/x-date-pickers": "^5.0.0-beta.4",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
